import React from 'react'
import { storiesOf } from '@storybook/react'

import { Image } from '.'

storiesOf('atoms|Image', module)
  .add('default', () => <Image />)
